--- a/src/app/layout/componentes/section-form-1/section-form-1.component.html
+++ b/src/app/layout/componentes/section-form-1/section-form-1.component.html
@@ -13,7 +13,7 @@
       Contáctanos y nos comunicaremos contigo a la brevedad para absolver todas
       tus dudas. Estamos para asesorarte.
     </p>
-    <img src="assets/images/img_contact.png" class="" alt="" />
+    <img src="assets/images/img_contact_2.png" class="" alt="" />
   </div>
 
   <!-- Columna 2 -->
@@ -23,7 +23,7 @@
         <input
           type="text"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
+          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 placeholder-gray-300 border-white focus:border-white"
           placeholder="NOMBRE COMPLETO"
           required
         />
@@ -32,7 +32,7 @@
         <input
           type="email"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
+          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 placeholder-gray-300 border-white focus:border-white"
           placeholder="CORREO ELECTRÓNICO"
           required
         />
@@ -41,7 +41,7 @@
         <input
           type="text"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
+          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 placeholder-gray-300 border-white focus:border-white"
           placeholder="TELÉFONO"
           required
         />
@@ -50,7 +50,7 @@
         <input
           type="text"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
+          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 placeholder-gray-300 border-white focus:border-white"
           placeholder="ASUNTO"
           required
         />
@@ -59,7 +59,7 @@
         <textarea
           id="message"
           rows="4"
-          class="block p-2.5 w-full text-xl text-gray-100 bg-[#f3f3f3] p-5 placeholder-gray-300 border-white"
+          class="block p-2.5 w-full text-xl text-gray-500 bg-[#f3f3f3] p-5 placeholder-gray-300 border-white focus:border-white"
           placeholder="MENSAJE"
         ></textarea>
       </div>
