--- a/src/app/layout/componentes/services-2/services-2.component.html
+++ b/src/app/layout/componentes/services-2/services-2.component.html
@@ -18,7 +18,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -29,7 +29,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -40,7 +40,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
 </div>
 <hr class="border-1 border-gray-500" />
@@ -54,20 +54,20 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-5.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="text-gray-700 text-xl font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">
+      Contrataciones con el Estado
+    </h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]"
-      >Contrataciones con el Estado</a
-    >
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -80,7 +80,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
 </div>
 <hr class="border-1 border-gray-500" />
@@ -94,7 +94,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -107,7 +107,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -118,7 +118,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
 </div>
 <hr class="border-1 border-gray-500" />
@@ -132,7 +132,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -145,7 +145,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -158,6 +158,6 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
+    <a href="#" class="text-base text-[#495464] font-bold">VER MAS</a>
   </div>
 </div>
