--- a/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
+++ b/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
@@ -4,7 +4,7 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
+            class="relative h-full w-full rounded-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
@@ -22,7 +22,7 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
+            class="relative h-full w-full rounded-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
@@ -40,7 +40,7 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
+            class="relative h-full w-full rounded-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
@@ -58,7 +58,7 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
+            class="relative h-full w-full rounded-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
