--- a/src/app/layout/componentes/footer-logo/footer-logo.component.html
+++ b/src/app/layout/componentes/footer-logo/footer-logo.component.html
@@ -1,10 +1,10 @@
-<footer class="bg-[#0e0f12]">
+<footer class="bg-[#4e5564]">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <div class="md:flex md:justify-between">
       <div class="mb-6 md:mb-0">
         <a href="#" class="flex items-center">
           <img
-            src="assets/images/logo-negro.png"
+            src="assets/images/logo-azul.png"
             class="h-[100px] w-[500px]"
             alt=" Logo"
           />
