--- a/src/app/layout/componentes/section-form-1/section-form-1.component.html
+++ b/src/app/layout/componentes/section-form-1/section-form-1.component.html
@@ -3,7 +3,7 @@
   <!-- Columna 1 -->
   <div class="sm:col-span-4 p-4">
     <h2
-      class="text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
+      class="text-2xl sm:text-3xl md:text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
     >
       CONTÁCTE CON NOSOTROS
     </h2>
