--- a/src/app/layout/componentes/subtitulo-parrafo-2/subtitulo-parrafo-2.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-2/subtitulo-parrafo-2.component.html
@@ -1,6 +1,6 @@
 <div class="mx-auto px-4 my-10">
   <h2
-    class="text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
+    class="text-2xl sm:text-3xl md:text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
   >
     NUESTRO EQUIPO
   </h2>
